--- a/src/styles.css
+++ b/src/styles.css
@@ -30,9 +30,11 @@
   display: flex;
   flex-direction: column;
   padding: 40px 35px;
-  max-width: 1150px;
+  max-width: 800px;
   margin: 0 auto;
   max-width: 1024px;
+  justify-content: center;
+  align-items: center;
 }
 
 .hero-grid {
@@ -91,6 +93,6 @@
   display: flex;
   flex-wrap: nowrap;
   overflow-x: auto;
-  max-width: 1024px;
+  max-width: 800px;
   margin: 20px auto;
 }
